<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/activity_main_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:autofillHints="@string/enter_number"
        android:hint="@string/enter_number"
        android:inputType="number" />

    <Button
        android:id="@+id/activity_main_square_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:text="@string/square_"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_square_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.5"
                android:textColor="?colorPrimaryVariant"
                android:textSize="18sp"
                tools:text="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:text="@string/square_root"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_square_root_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.5"
                android:textColor="?colorPrimaryVariant"
                android:textSize="18sp"
                tools:text="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:text="@string/cube"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_cube_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.5"
                android:textColor="?colorPrimaryVariant"
                android:textSize="18sp"
                tools:text="4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:text="@string/cube_root"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_cube_root_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="0.5"
                android:textColor="?colorPrimaryVariant"
                android:textSize="18sp"
                tools:text="4" />

        </TableRow>
    </TableLayout>

</LinearLayout>